# FastApi-and-SqlModel

./: .env  .gitattributes  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1ec5247267ed_agregando_campos.py  9deec32336d8_agregando_campos.py
src/: main.py
src/auth/: auth_handler.py  dependencies.py  jwt_handler.py
src/db/: db.sqlite  db.sqlite3  engine.py  init_db.py  session.py
src/models/: user.py
src/routes/: login.py  prueba.py  refresh.py  user.py
src/schemas/: auth.py  user.py
